# forgent-test

./: .gitignore  README copy.md  README.md  TASK.MD  package-lock.json  package.json  worker.md
apps/api/app/routes/: internal.py
apps/web/: next.config.mjs  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/_components/ui/: button.tsx  confirm-dialog.tsx  input.tsx  label.tsx  status-pill.tsx  step-indicator.tsx  toaster.tsx
apps/web/app/checklists/: page.tsx
apps/web/app/checklists/[id]/: page.tsx
apps/web/app/checklists/browse/: page.tsx
docs/: LLM_operator_guide.md
scripts/: dev.sh
services/api/: dev.db  pyproject.toml  requirements.txt
services/api/app/: db.py  jobs.py  main.py  models.py  queue.py  schemas.py  storage.py
services/worker/: pyproject.toml  requirements.txt
services/worker/worker/: actors.py  api_client.py  broker.py  chunking.py  config.py  dedupe.py  embeddings.py  llm.py  main.py  models.py  ocr.py  s3io.py  synthesis.py  utils.py
