[project]
name = "forgent-worker"
version = "0.1.0"
description = "Forgent Checklist Dramatiq worker"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dramatiq[redis]==1.18.0",
    "redis==5.0.8",
    "boto3==1.34.162",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "numpy==1.26.4",
    "PyMuPDF==1.24.10",
    "anthropic==0.31.2",
]

[project.scripts]
worker = "dramatiq worker.main --processes 1 --threads 1"

[tool.uv]
dev-dependencies = []
